--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,13 @@
             android:exported="false"
             android:label="@string/app_name" />
 
+        <provider
+            android:name="com.kansoubunko.kiyota.kansoubunko.constants.KansouProvider"
+            android:authorities="com.kansoubunko.kiyota.kansoubunko.provider"
+            android:exported="true"
+            android:process=":KansouProvider"
+            android:writePermission="com.kansoubunko.kiyota.kansoubunko.provider.permission.WRITE_DATA" />
+
     </application>
 
 </manifest>
