# ログイン処理、全データ取得処理  - app/src/main/AndroidManifest.xml  - プロバイダーを追加  - app/src/main/java/com/kansoubunko/kiyota/kansoubunko/activity/LoginActivity.java  - contextをgetApplicationContext()に修正  - app/src/main/java/com/kansoubunko/kiyota/kansoubunko/activity/MainActivity.java  - 全取得したデータを表示する処理を追加  - app/src/main/java/com/kansoubunko/kiyota/kansoubunko/activity/MyApplication.java  - シングルトンを作成  - app/src/main/java/com/kansoubunko/kiyota/kansoubunko/dao/KansouDao.java  - DBロジックを修正  - app/src/main/java/com/kansoubunko/kiyota/kansoubunko/dto/KansouEntity.java  - userIdを削除  - app/src/main/java/com/kansoubunko/kiyota/kansoubunko/util/BookInfoHelper.java  - helperクラスを分離  - app/src/main/java/com/kansoubunko/kiyota/kansoubunko/util/ConfigPropUtil.java  - シングルトン用のクラスを作成  - app/src/main/java/com/kansoubunko/kiyota/kansoubunko/util/UserInfoHelper.java  - helperクラスを分離  - app/src/main/res/xml/file_paths.xml  - シングルトン用xmlを作成

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,12 +45,15 @@
             android:label="@string/app_name" />
 
         <provider
-            android:name="com.kansoubunko.kiyota.kansoubunko.constants.KansouProvider"
-            android:authorities="com.kansoubunko.kiyota.kansoubunko.provider"
-            android:exported="true"
-            android:process=":KansouProvider"
-            android:writePermission="com.kansoubunko.kiyota.kansoubunko.provider.permission.WRITE_DATA" />
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="com.kansoubunko.kiyota.kansoubunko.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
 
     </application>
 
-</manifest>
+</manifest><!--<provider--><!--android:name="com.kansoubunko.kiyota.kansoubunko.constants.KansouProvider"--><!--android:authorities="com.kansoubunko.kiyota.kansoubunko.provider"--><!--android:exported="true"--><!--android:process=":KansouProvider"--><!--android:writePermission="com.kansoubunko.kiyota.kansoubunko.provider.permission.WRITE_DATA" />-->
