# タイムラインActivity作成  - app/src/main/AndroidManifest.xml  - タイムラインActiviryをマニフェストに追加  - app/src/main/java/com/kansoubunko/kiyota/kansoubunko/activity/MainActivity.java  - タイムラインActivityへの遷移処理を追加  - app/src/main/java/com/kansoubunko/kiyota/kansoubunko/activity/TimeLineActivity.java  - ListViewの表示処理を作成  - app/src/main/java/com/kansoubunko/kiyota/kansoubunko/adapter/TimeLineGridViewAdapter.java  - GridViewの表示処理を作成  - app/src/main/java/com/kansoubunko/kiyota/kansoubunko/adapter/TimeLineListViewAdapter.java  - ListViewの表示処理を作成  - app/src/main/res/layout/activity_timeline.xml  - タイムラインActivityを作成

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,11 @@
             android:exported="false"
             android:label="@string/app_name" />
 
+        <activity
+            android:name=".activity.TimeLineActivity"
+            android:exported="false"
+            android:label="@string/app_name" />
+
         <provider
             android:name="android.support.v4.content.FileProvider"
             android:authorities="com.kansoubunko.kiyota.kansoubunko.fileprovider"
