# activity→fragmentへ置換  - app/src/main/AndroidManifest.xml  - リネーム。(修正必要)  - app/src/main/java/com/kansoubunko/kiyota/kansoubunko/activity/MainActivity.java  - fragment呼び出し処理を追加  - app/src/main/java/com/kansoubunko/kiyota/kansoubunko/activity/RegistActivity.java  - 不要なActivityを削除  - app/src/main/java/com/kansoubunko/kiyota/kansoubunko/activity/SettingActivity.java  - 不要なActivityを削除  - app/src/main/java/com/kansoubunko/kiyota/kansoubunko/adapter/BookListGridAdapter.java  - 不要なimport文を削除  - app/src/main/java/com/kansoubunko/kiyota/kansoubunko/fragment/BookReviewDialogFragment.java  - Activityリネームの影響  app/src/main/java/com/kansoubunko/kiyota/kansoubunko/fragment/BookTitleDialogFragment.java app/src/main/java/com/kansoubunko/kiyota/kansoubunko/fragment/FavoriteFragment.java app/src/main/java/com/kansoubunko/kiyota/kansoubunko/fragment/FollowersFragment.java app/src/main/java/com/kansoubunko/kiyota/kansoubunko/fragment/ListFragment.java app/src/main/java/com/kansoubunko/kiyota/kansoubunko/fragment/MainFragment.java app/src/main/java/com/kansoubunko/kiyota/kansoubunko/fragment/RegistFragment.java app/src/main/java/com/kansoubunko/kiyota/kansoubunko/fragment/SettingFragment.java app/src/main/java/com/kansoubunko/kiyota/kansoubunko/fragment/TimeLineFragment.java app/src/main/res/layout/fragment_favorite.xml app/src/main/res/layout/fragment_followers.xml app/src/main/res/layout/fragment_list.xml app/src/main/res/layout/fragment_main.xml app/src/main/res/layout/fragment_regist.xml app/src/main/res/layout/fragment_setting.xml app/src/main/res/layout/fragment_timeline.xml

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,22 +34,22 @@
             android:label="@string/app_name" />
 
         <activity
-            android:name=".activity.RegistActivity"
+            android:name=".fragment.RegistFragment"
             android:exported="false"
             android:label="@string/app_name" />
 
         <activity
-            android:name=".activity.ListActivity"
+            android:name=".fragment.ListFragment"
             android:exported="false"
             android:label="@string/app_name" />
 
         <activity
-            android:name=".activity.SettingActivity"
+            android:name=".fragment.SettingFragment"
             android:exported="false"
             android:label="@string/app_name" />
 
         <activity
-            android:name=".activity.TimeLineActivity"
+            android:name=".fragment.TimeLineFragment"
             android:exported="false"
             android:label="@string/app_name" />
 
